What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

November 14, 2007
+ [FOD] Created the file index.c in the codec directory. This file handles the creation of index files, 
		at encoding and decoding. 
* [FOD] Fixed bugs during the creation of the index (PCRL progression order)

November 14, 2007
! [FOD] - First Patch by Callum Lerwick. Instead of reinventing realloc, j2k_read_sod now just uses opj_realloc in j2k.c
		- Second Patch by Callum Lerwick. This patch rearranges the largest memory allocations so they're allocated as 
		late as possible, and freed as soon as possible. This cuts memory usage by about half on two large test images.
		- Third Patch by Callum Lerwick. The opj_tcd_cblk array is one of the largest allocations, because it
		contains a bunch of static buffers. This also makes it a major source of cache thrashing. This patch allocates 
		the buffers from the heap, and dynamically sizes them in the decoder. I have not yet managed to dynamically size 
		them in the encoder, getting the decoder to do it was tricky enough... I also split opj_tcd_cblk_t into separate 
		encode and decode versions. A lot of fields were not used by both, so this cuts its size even further.

* [FOD] Avoided ABI breakage

November 13, 2007
! [FOD] Patch by Dzonatas and Callum Lerwick.
        Fp/vectorization patch which basically converts most of the irreversible decode codepath to floating point,
        eliminating a few rounds of int/fp conversion, resulting in a vast performance improvement,
	and an increase in accuracy.

November 8, 2007
! [FOD] In t1.c, small change to avoid calling twice t1_getwmsedec()
        Patches from Callum Lewick:
		- Basic gcc optimization flags in cmake and makefile match.
		- Fixed some spelling errors in dwt.c.

November 5, 2007
*+ [GB] Fixed a bug which prevented JPWL from working on multi-tiled images; added some more fields in the interface info structures 